namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-supervision-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-supervision-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "probation-integration-team"
    cloud-platform.justice.gov.uk/application: "hmpps-supervision"
    cloud-platform.justice.gov.uk/owner: "probation-integration <probation-integration@JusticeUK.onmicrosoft.com>"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-supervision"
    cloud-platform.justice.gov.uk/team-name: "probation-integration"
    cloud-platform.justice.gov.uk/review-after: ""
